[project]
name = "pubmed-project"
version = "0.1.0"
description = "Fetch research papers from PubMed and filter by non-academic authors."
authors = [
    {name = "Spandana",email = "chimutaspandana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
packages = [{ include = "pubmed_project" }]
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
