[tool.poetry]
name = "pubmed_project"
version = "0.1.0"
description = "Fetch research papers from PubMed and filter by non-academic authors."
authors = ["Spandana <chimutaspandana@gmail.com>"]
readme = "README.md"
packages = [{ include = "pubmed_project" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.3"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
